# libffm

./: .gitignore  CMakeLists.txt  ffm-train.cpp  ffm.cpp  ffm.h
tests/: ffm_test.cpp
